# Jael

./: .ghci  .ghcid  .gitignore  .travis.yml  .travis.yml.old  BUILD  LICENSE  README  README.adoc  README.md  Setup.hs  WORKSPACE  cabal.nix  cabal.project  config-vars.nix  config.bzl  config.nix  default.nix  env.nix  flake.nix  gen-jael-drv.nix  generate-cabal.sh  hie.yaml  jael.cabal  package-defaults.dhall  package-dependencies.dhall  package.yaml  pinned-nixpkgs.nix  pinned.nix  shell.nix  shell.sh  stack.yaml
doc/: ChangeLog.md  Guide.md  build.adoc  build.md  guide.adoc  guide.md  hacking.adoc
git-hooks/: 10-pre-commit.sh
golden/: expr.add.in  expr.add.out  expr.if.in  expr.if.out  expr.let.in  expr.let.out  expr.logic-prec.in  expr.logic-prec.out
jael/: .ghci  .ghcid  .hdevtoolsrc  .hlint.yaml  BUILD  LICENSE  brittany.yaml  default.nix  jael.cabal  libjael.cabal  liquid-fixpoint.nix  shell.nix  stack.yaml
jael-grammar/: .ghci  .ghcid  .sosrc  BUILD  Grammar.cf  Setup.hs  default.nix  hie.yaml  jael-grammar.cabal  jael-grammar.cabal.bak  package.dhall  runBNFC.sh  shell.nix
jael-grammar-test/: shell.nix
jael-grammar-test/foo/: AbsGrammar.hs  DocGrammar.txt  LexGrammar.x  SkelGrammar.hs
jael-grammar-test/test/: Main.hs
jael-grammar/golden/: expr.add.out
jael-grammar/lib/Jael/: Grammar.cf  Grammar.hs
jael-grammar/lib/Jael/Grammar/: AST.hs  ErrM.hs  Error.hs  Input.hs  Lex.x  Lexer.hs  Lexer.x  Located.hs  Monad.hs  Par.y  Parser.hs  Parser.y  Token.hs
jael-grammar/src/: Main.hs
jael-grammar/src/Jael/: Grammar.hs
jael-grammar/test/: LexerSpec.hs  Main.hs  ParserSpec.hs
jael-pp/lib/Jael/Pretty/: Helpers.hs  TreeDiff.hs
jael-pp/test/Jael/Test/: PrettyProps.hs
jael-types/: hie.yaml  jael-types.cabal  package.dhall  shell.nix
jael-types/lib/Jael/: Types.hs
jael-types/lib/Jael/Types/: Expr.hs  Pattern.hs  QType.hs  Row.hs  Type.hs
jael/lib/: Prelude.hs
jael/lib/Jael/: AST.hs  Class.hs  Classes.hs  Compile.hs  ConsGen.hs  Constants.hs  DataDecl.hs  Expr.hs  HMInfer.hs  Infer.hs  Matching.hs  Parser.hs  Pattern.hs  Prelude.hs  Pretty.hs  Prog.hs  QType.hs  Quotes.hs  Session.hs  TH.hs  TIOps.hs  Type.hs  Types.hs  Uniqify.hs  Util.hs
jael/lib/Jael/Classes/: TIOps.hs
jael/lib/Jael/CodeGen/: Convert.hs
jael/lib/Jael/Compile/: Stage2.hs
jael/lib/Jael/Conc/: Env.hs  Session.hs
jael/lib/Jael/New/: Check.hs  Constants.hs  Core.hs  DataDecl.hs  Expr.hs  ExprToCore.hs  HMInfer.hs  Misc.hs  Parser.hs  QType.hs  Quotes.hs  Session.hs  Type.hs  Types.hs
jael/lib/Jael/Prelude/: Minimal.hs
jael/lib/Jael/Seq/: Prm.hs
jael/lib/Jael/Types/: Ann.hs  Expr.hs  Parser.hs  Prog.hs  Session.hs  Template.hs  Type.hs
jael/lib/Jael/Util/: Ann.hs
jael/lib/old/CodeGen/: Convert.hs  Module.hs
jael/lib/old/Compile/: Stage1.hs
jael/lib/old/Conc/: Proc.hs
jael/lib/old/Conc/TyCk/: S2.hs  S3.hs
jael/lib/old/Seq/: UserDefinedType.hs
jael/lib/old/Seq/TI/: S2.hs
jael/old/TestOld/Jael/: Properties.hs
jael/old/TestOld/Jael/CodeGen/: Expr.hs
jael/old/TestOld/Jael/Conc/: S3TyCk.hs
jael/old/TestOld/Old/: UniqifySpec.hs
jael/old/TestOld/Old/Classes/: TIOpsSpec.hs
jael/old/TestOld/Old/Types/: ParserSpec.hs
jael/src/: Main.hs
jael/test/: Main.hs  Prelude.hs
jael/test/Jael/: ConsGenSpec.hs  ExprSpec.hs  InferSpec.hs  MatchingSpec.hs  ParserSpec.hs  UniqifySpec.hs
jael/test/Jael/Classes/: TIOpsSpec.hs
jael/test/Jael/New/: CheckSpec.hs  CoreSpec.hs  ExprSpec.hs  HMInferSpec.hs  HMInferSpec.hs.x  ParserSpec.hs
jael/test/Jael/Test/: Util.hs
jael/test/Jael/Types/: ExprSpec.hs  ParserSpec.hs
jael/test/Test/Jael/: Compile.hs  Util.hs
jael/test/Test/Jael/Conc/: Proc.hs  S2TyCk.hs  Session.hs
jael/test/Test/Jael/Seq/: Enum.hs
jael/test/test-inputs/: infer-fail.j  infer-pass.j
lib/: Prelude.hs
lib/Jael/: Compile.hs  Err.hs  Grammar.cf  Grammar.hs  Parser.hs  UserDefTy.hs  Util.hs
lib/Jael/CodeGen/: Convert.hs  Passes.hs
lib/Jael/Compile/: Common.hs  Stage1.hs  Stage2.hs
lib/Jael/Conc/: Env.hs  Proc.hs  Session.hs  TyCk.hs
lib/Jael/Conc/TyCk/: S2.hs  S3.hs
lib/Jael/Grammar/: AST.hs  Input.hs  Lexer.x  Monad.hs  Parser.y  Token.hs
lib/Jael/Hw/: Area.hs  Seq.hs
lib/Jael/Seq/: AST.hs  AlgDataTy.hs  Builtin.hs  CG_AST.hs  CG_Types.hs  Closure.hs  Enum.hs  Env.hs  Expr.hs  HM_AST.hs  HM_Types.hs  Literal.hs  Prm.hs  Struct.hs  TI.hs  Types.hs  UserDefTy.hs  UserDefinedType.hs
lib/Jael/Seq/TI/: HM.hs
lib/Jael/Util/: UPair.hs
nix/: default.nix  jael-grammar.nix  jael.nix  liquid-fixpoint-ghc710.nix  liquid-fixpoint.nix  liquiddesugar.nix  liquidhaskell.nix  llvm-general-pure.nix  llvm-general-src.nix  llvm-general.nix  overlay.nix  pkgs.nix  prover.nix  tasty-ant-xml-1.0.2.nix
old/: cabal.project  install-deps.sh
old/jael/: .ghci  jael.cabal
old/jael-grammar-test/: jael-grammar-test.cabal
old/jael-grammar-test/foo/: LexGrammar.hs  ParGrammar.hs  ParGrammar.y  PrintGrammar.hs  TestGrammar.hs
old/jael-pp/: jael-pp.cabal  shell.nix
old/jael-pp/lib/Jael/: Pretty.hs
old/jael-pp/test/: Main.hs
old/jael/lib/Jael/: AST.hs  Classes.hs  Error.hs  Liquid.hs  Pattern.hs  Prelude.hs  Pretty.hs  Type.hs
old/jael/lib/Jael/Data/: MultiMap.hs
old/jael/test/Jael/: ConstantsSpec.hs  HMInferSpec.hs  LiquidSpec.hs  PrettySpec.hs  QuotesSpec.hs  TypeSpec.hs
old/jael/test/Test/Jael/: Util.hs
old/proto/: Mine.hs  Mine2.hs  Overlaps.hs
proto/: .ghci  CircBuff.hs  Mine3.hs  circ.jael  runGhcid.sh  shell.nix
src/: Main.hs  Prelude.hs
src/Jael/: AST0.hs  Grammar.cf
src/Jael/Seq/: AST.hs  Grammar.cf
test/: LexerSpec.hs  ParserSpec.hs  Test.hs
test/Test/Jael/: Compile.hs  Examples.hs  Grammar.hs  Properties.hs  SeqTypeInf.hs  Util.hs
test/Test/Jael/CodeGen/: Expr.hs  Types.hs
test/Test/Jael/Conc/: Proc.hs  S2TyCk.hs  S3TyCk.hs  Session.hs  TyCk.hs
test/Test/Jael/Grammar/: Enum.hs  Expr.hs  HwProc.hs  Hwproc.hs  Proc.hs  Struct.hs  Type.hs  Util.hs
test/Test/Jael/Hw/: Area.hs  Seq.hs
test/Test/Jael/Seq/: AST.hs  Builtin.hs  Closure.hs  Enum.hs  Struct.hs  TI.hs
