name:                jael
version:             0.1.0.0
synopsis:            Jael: An Embedded Language
description:         A language for embedded systems.
license:             GPL-2
license-file:        LICENSE
author:              Jordan Woehr
maintainer:          jordanwoehr@gmail.com
copyright:           Copyright (c) 2015 Jordan Woehr
category:            Language
build-type:          Custom
cabal-version:       >=1.22

source-repository head
  type: git
  location: git://github.com/woehr/jael

library
  exposed-modules:     Jael.CodeGen.Convert
                       Jael.CodeGen.Module
                       Jael.CodeGen.Passes
                       Jael.Compile
                       Jael.Conc.Env
                       Jael.Conc.Proc
                       Jael.Conc.Session
                       Jael.Conc.TyCk
                       Jael.Grammar
                       Jael.Grammar.Abs
                       Jael.Grammar.ErrM
                       Jael.Grammar.Lex
                       Jael.Grammar.Par
                       Jael.Grammar.Print
                       Jael.Hw.Area
                       Jael.Parser
                       Jael.Seq.Builtin
                       Jael.Seq.CG_AST
                       Jael.Seq.CG_Types
                       Jael.Seq.Enum
                       Jael.Seq.Env
                       Jael.Seq.HM_AST
                       Jael.Seq.HM_Types
                       Jael.Seq.Literal
                       Jael.Seq.Prm
                       Jael.Seq.Struct
                       Jael.Seq.TI
                       Jael.UserDefTy
                       Jael.Util

  default-extensions:  DeriveFunctor,
                       TypeFamilies,
                       OverloadedStrings

  build-depends:       base-noprelude >=4.8,
                       classy-prelude,
                       mtl-prelude

  build-depends:       array,
                       containers,
                       llvm-general,
                       llvm-general-pure,
                       recursion-schemes,
                       semigroups

  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

executable jael
  main-is:             Main.hs

  build-depends:       base-noprelude >=4.8,
                       classy-prelude

  build-depends:       jael

  default-extensions:  OverloadedStrings

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

test-suite test-jael
  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  default-extensions:  OverloadedStrings,
                       QuasiQuotes

  build-depends:       base-noprelude >=4.8,
                       classy-prelude,
                       HUnit,
                       QuickCheck,
                       template-haskell,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2

  build-depends:       jael,
                       containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

