name:                jael
version:             0.1.0.0
synopsis:            Jael: An Embedded Language
description:         A language for embedded systems.
license:             GPL-2
license-file:        LICENSE
author:              Jordan Woehr
maintainer:          jordanwoehr@gmail.com
copyright:           Copyright (c) 2015 Jordan Woehr
category:            Language
build-type:          Custom
cabal-version:       >=1.22

source-repository head
  type: git
  location: git://github.com/woehr/jael

library
  exposed-modules:     Jael.CodeGen.Convert
                       Jael.CodeGen.Module
                       Jael.CodeGen.Passes
                       Jael.Compile
                       Jael.Compile.Common
                       Jael.Compile.Stage1
                       Jael.Compile.Stage2
                       Jael.Conc.Env
                       Jael.Conc.Proc
                       Jael.Conc.Session
                       Jael.Conc.TyCk
                       Jael.Grammar
                       Jael.Grammar.Abs
                       Jael.Grammar.ErrM
                       Jael.Grammar.Lex
                       Jael.Grammar.Par
                       Jael.Grammar.Print
                       Jael.Parser
                       Jael.Seq.AST
                       Jael.Seq.Env
                       Jael.Seq.Literal
                       Jael.Seq.Prm
                       Jael.Seq.TI
                       Jael.Seq.Types
                       Jael.Seq.UserDefinedType
                       Jael.Util

  default-extensions:  DeriveFunctor,
                       TypeFamilies,
                       OverloadedStrings

  build-depends:       base-noprelude >=4.8,
                       classy-prelude,
                       mtl-prelude

  build-depends:       array,
                       containers,
                       llvm-general,
                       llvm-general-pure,
                       recursion-schemes,
                       semigroups

  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

executable jael
  main-is:             Main.hs

  default-extensions:  OverloadedStrings

  build-depends:       base-noprelude >=4.8,
                       classy-prelude

  build-depends:       jael

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

test-suite test-jael
  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  default-extensions:  OverloadedStrings,
                       QuasiQuotes

  build-depends:       base-noprelude >=4.8,
                       classy-prelude,
                       HUnit,
                       QuickCheck,
                       template-haskell,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2

  build-depends:       jael,
                       containers,
                       llvm-general-pure

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

