cabal-version: 1.12

name:           jael
version:        0.0.0
homepage:       https://github.com/woehr/Jael#readme
bug-reports:    https://github.com/woehr/Jael/issues
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/woehr/Jael

library
  exposed-modules:
      Jael.Grammar
      Jael.Grammar.AST
      Jael.Grammar.Input
      Jael.Grammar.Lexer
      Jael.Grammar.Monad
      Jael.Grammar.Parser
      Jael.Grammar.Token
  hs-source-dirs:
      lib
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      array
    , base
    , bytestring
    , comonad
    , containers
    , deepseq
    , deriving-compat
    , filepattern
    , free
    , hspec
    , hspec-discover
    , mtl
    , pretty-show
    , recursion-schemes
    , text >=2
    , transformers
    , tree-diff
    , uniform-pair
    , unordered-containers
  default-language: Haskell2010

executable jael
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      array
    , base
    , bytestring
    , comonad
    , containers
    , deepseq
    , deriving-compat
    , filepattern
    , free
    , hspec
    , hspec-discover
    , jael
    , mtl
    , pretty-show
    , recursion-schemes
    , text >=2
    , transformers
    , tree-diff
    , uniform-pair
    , unordered-containers
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      LexerSpec
      ParserSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      array
    , base
    , bytestring
    , comonad
    , containers
    , deepseq
    , deriving-compat
    , filepattern
    , free
    , hspec
    , hspec-discover
    , jael
    , mtl
    , pretty-show
    , recursion-schemes
    , text >=2
    , transformers
    , tree-diff
    , uniform-pair
    , unordered-containers
  default-language: Haskell2010
