name:                jael-grammar
version:             0.1.0.0
synopsis:            Grammar library for Jael
description:         A grammar for a language for embedded systems.
license:             GPL-2
license-file:        LICENSE
author:              Jordan Woehr
maintainer:          jordanwoehr@gmail.com
copyright:           Copyright (c) 2016 Jordan Woehr
category:            Language
build-type:          Custom
cabal-version:       >=1.22

extra-source-files:  lib/Jael/Grammar.cf

source-repository head
  type: git
  location: git://github.com/woehr/jael

library

  exposed-modules:     Jael.Grammar
                       Jael.Grammar.Abs
                       Jael.Grammar.Lex
                       Jael.Grammar.Par
                       Jael.Grammar.Skel
                       Jael.Grammar.Print
                       Jael.Grammar.ErrM

  build-depends:       base >=4.8 && <5,
                       array,
                       mtl

  hs-source-dirs:      lib
  default-language:    Haskell2010

custom-setup
  setup-depends:       alex,
                       BNFC,
                       happy
