name: jael-grammar
version: 0.0.0.0
build-type: Simple
cabal-version: >=1.10

library
  build-depends:    base,

                    jael-types,

                    array,
                    bytestring,
                    mtl,
                    scanf,
                    text,
                    transformers

  build-tools:      alex,
                    happy

  default-language: Haskell2010
  hs-source-dirs:   lib

  exposed-modules:  Jael.Grammar
                    Jael.Grammar.Abs
                    Jael.Grammar.ErrM
                    Jael.Grammar.Lex
                    Jael.Grammar.Par
                    Jael.Grammar.Print

executable jael-syntax
  build-depends:    base,
                    jael-grammar

  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
