name: jael-grammar
version: 0.0.0.0
build-type: Simple
cabal-version: >=1.10

extra-source-files:
  lib/Jael/Grammar/Lexer.x
  lib/Jael/Grammar/Parser.y

library
  default-language: Haskell2010

  build-depends:
    array,
    base,
    bytestring,
    comonad,
    free,
    jael-types,
    mtl,
    open-adt,
    row-types,
    scanf,
    text,
    transformers,
    utf8-string

  build-tools:
    alex,
    happy

  hs-source-dirs:
    lib

  exposed-modules:
    Jael.Grammar
    Jael.Grammar.Lexer
    Jael.Grammar.Monad
    Jael.Grammar.Parser
    Jael.Grammar.Token

executable jael-syntax
  default-language: Haskell2010

  main-is: Main.hs

  build-depends:
    base,
    jael-grammar

  hs-source-dirs:
    src
