name: jael-types
version: 0.0.0.0
build-type: Simple
cabal-version: >=1.10

library
  build-depends: base
               , containers
               , deepseq
               , deriving-compat
               , free
               , open-adt
               , recursion-schemes
               , row-types
               , text
               , uniform-pair

  default-language: Haskell2010
  exposed-modules:  Jael.Types
                    Jael.Types.Expr
                    Jael.Types.Pattern
                    Jael.Types.QType
                    Jael.Types.Row
                    Jael.Types.Type
  hs-source-dirs:   lib
