name:                jael
version:             0.1.0.0
synopsis:            Jael: An Embedded Language
description:         A language for embedded systems.
license:             GPL-2
license-file:        LICENSE
author:              Jordan Woehr
maintainer:          jordanwoehr@gmail.com
copyright:           Copyright (c) 2015 Jordan Woehr
category:            Language
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: git://github.com/woehr/jael

library
--  exposed-modules:     Jael.CodeGen.Convert
--                       Jael.CodeGen.Module
--                       Jael.CodeGen.Passes
--                       Jael.Compile
--                       Jael.Compile.Stage1
--                       Jael.Compile.Stage2
--                       Jael.Conc.Env
--                       Jael.Conc.Proc
--                       Jael.Conc.Session
--                       Jael.Conc.TyCk.S2
--                       Jael.Conc.TyCk.S3
  exposed-modules:     Jael.Expr
                       Jael.Infer
                       Jael.Parser
                       Jael.Pretty
                       Jael.Prog
                       Jael.Session
                       Jael.TIOps
                       Jael.Type
--                       Jael.Seq.Env
--                       Jael.Seq.TI.S2
--                       Jael.Seq.TI.HM
--                       Jael.Seq.UserDefinedType
                       Jael.Util
                       Jael.Util.Ann

  build-depends:       base >=4.8 && <5,
                       array,
                       base-prelude,
                       bifunctors,
                       comonad,
                       containers,
                       deriving-compat >= 0.3,
                       free,
                       jael-grammar,
                       liquid-fixpoint,
                       llvm-general,
                       llvm-general-pure,
                       mtl-prelude,
                       placeholders,
                       recursion-schemes >= 5.0.1,
                       text,
                       wl-pprint-text >= 1.1.1.0

  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

executable jael
  main-is:             Main.hs

  build-depends:       base >=4.8 && <5,
                       base-prelude,
                       jael

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

test-suite test-jael
  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  other-modules:       Jael.ExprSpec,
                       Jael.ParserSpec

  build-depends:       base          >=4.8 && <5,
                       base-prelude,
                       jael,
                       jael-grammar,
                       free,
                       hspec         == 2.*,
                       liquid-fixpoint,
                       recursion-schemes >= 5,
                       text

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

