name:                jael
version:             0.1.0.0
synopsis:            Jael: An Embedded Language
description:         A language for embedded systems.
license:             GPL-2
license-file:        LICENSE
author:              Jordan Woehr
maintainer:          jordanwoehr@gmail.com
copyright:           Copyright (c) 2015 Jordan Woehr
category:            Language
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: git://github.com/woehr/jael

library
  exposed-modules:     Prelude
                       Jael.Classes
                       Jael.Classes.TIOps
                       Jael.ConsGen
                       Jael.Constants
                       Jael.Infer
                       Jael.Pretty
                       Jael.Quotes
                       Jael.Types
                       Jael.Types.Ann
                       Jael.Types.Expr
                       Jael.Types.Parser
                       Jael.Types.Prog
                       Jael.Types.Session
                       Jael.Types.Type
                       Jael.Uniqify
                       Jael.Util

  build-depends:       base-noprelude,
                       array,
                       base-prelude,
                       comonad,
                       containers,
                       deriving-compat >= 0.3,
                       free,
                       Grempa,
                       jael-grammar,
                       liquid-fixpoint,
                       llvm-hs,
                       llvm-hs-pure,
                       mtl-prelude,
                       placeholders,
                       recursion-schemes >= 5.0.1,
                       syb,
                       template-haskell,
                       text,
                       unordered-containers,
                       wl-pprint-text >= 1.1.1.0

  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-ignore-asserts
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

executable jael
  main-is:             Main.hs

  build-depends:       base-noprelude,
                       jael

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-ignore-asserts
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

test-suite test-jael
  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  other-modules:       Jael.Test.Util
                       Jael.Classes.TIOpsSpec
                       Jael.ConsGenSpec
                       Jael.InferSpec
                       Jael.UniqifySpec
                       Jael.Types.ExprSpec
                       Jael.Types.ParserSpec

  build-depends:       base-noprelude,
                       jael,
                       jael-grammar,
                       free,
                       hspec         == 2.*,
                       liquid-fixpoint,
                       recursion-schemes >= 5,
                       text,
                       array, containers, comonad, wl-pprint-text >= 1.1.1.0,
                       mtl-prelude, deriving-compat, unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-ignore-asserts
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

