name:                jael
version:             0.1.0.0
synopsis:            Jael: An Embedded Language
description:         A language for embedded systems.
license:             GPL-2
license-file:        LICENSE
author:              Jordan Woehr
maintainer:          jordanwoehr@gmail.com
copyright:           Copyright (c) 2015 Jordan Woehr
category:            Language
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: git://github.com/woehr/jael

library
  exposed-modules:     Prelude
                       Jael.New.Expr
                       --Jael.New.HMInfer
                       Jael.New.Parser
                       Jael.New.Types
                       Jael.New.QType

  build-depends:       base-noprelude,
                       ansi-wl-pprint,
                       array,
                       base-prelude,
                       bytestring,
                       comonad,
                       containers,
                       deriving-compat >= 0.3,
                       free,
                       liquid-fixpoint,
                       llvm-hs,
                       llvm-hs-pure,
                       mtl-prelude,
                       parsers,
                       placeholders,
                       recursion-schemes >= 5.0.1,
                       template-haskell,
                       text,
                       trifecta,
                       unordered-containers

  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-ignore-asserts
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

executable jael
  main-is:             Main.hs

  build-depends:       base-noprelude,
                       jael

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-ignore-asserts
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

test-suite test-jael
  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  other-modules:       Jael.Test.Util
                       Jael.New.ParserSpec

  build-depends:       base-noprelude,
                       jael,
                       hspec,
                       liquid-fixpoint,
                       trifecta

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-ignore-asserts
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-identities

