name: jael-pp
version: 0.0.0.0
build-type: Simple
cabal-version: >=1.10

library
  build-depends: base
               , containers
               , jael-types
               , open-adt
               , prettyprinter
               , recursion-schemes
               , row-types
               , tree-diff

  default-language: Haskell2010
  exposed-modules:  Jael.Pretty
                    Jael.Pretty.TreeDiff
  other-modules:    Jael.Pretty.Helpers
  hs-source-dirs:   lib

test-suite property-tests
  build-depends: base
               , hedgehog
               , jael-pp
               , jael-types
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
